# minecraft-native-interface

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  run.sh
src/: CMakeLists.txt  DiscordRP.cpp  DiscordRP.hpp  InjectionClient.cpp  InjectionClient.hpp  JavaClass.cpp  JavaClass.hpp  JavaClassLayout.hpp  JavaClassMethod.hpp  JavaClassStructure.hpp  Logger.hpp  Mapper.hpp  libmain.cpp
src/mapping/: Minecraft.cpp  Minecraft.hpp
